components/heptagon/test/bad/bad_merge1.ept
type t = A | B
type tt = C
node t2bool(x: t) returns (b: bool)
  let
    b = merge x (A-> true) (B-> true) (C-> false)
  tel
